# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-5595b9612934aaf23da774a2fbfcc900b15d44de6a2042375bc9a7dbf29ddd59.json  query-f1a855a5576dd14a54f2c203c312fa11f0f04bbec3411be26ab68f8804e3d213.json
configuration/: base.yaml  production.yaml
migrations/: 20240515195509_create_subscription_tokens_table.sql
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
