[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.13"
actix-web = "4"
env_logger = "0.9"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"]}
serde = { version = "1", features = ["derive"]}
uuid = { version = "1", features = ["v4"]}
chrono = { version = "0.4.22", default_features = false, features = ["clock"]}

[dependencies.sqlx]
version = "0.6"
default-feaures = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.11"