[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.13"
actix-web = "4"
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"]}
tracing-log = { version = "0.1" }
serde = { version = "1", features = ["derive"]}
uuid = { version = "1", features = ["v4"]}
chrono = { version = "0.4.22", default_features = false, features = ["clock"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = { version = "0.3"}
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }

[dev-dependencies]
reqwest = "0.11"
